--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "mean-template",
+  "name": "practice",
   "version": "0.0.0",
-  "homepage": "https://github.com/nss-cohort-2014-06-07/mean-template",
+  "homepage": "https://github.com/mkeef1/practice",
   "authors": [
-    "Chyld Medford <chyld.medford@gmail.com>"
+    "Matt Keef <mkeef1@gmail.com>"
   ],
-  "description": "The MEAN Template",
+  "description": "practice",
   "license": "MIT",
   "dependencies": {
     "angular": "1.3.0-rc.1",
